--- a/templates/search.html
+++ b/templates/search.html
@@ -1,4 +1,12 @@
 <html lang="en">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
+    <link rel="stylesheet" href="search.css?version1.0" type="text/css">
+    <!-- Search form -->
+    <div id="search">
+        <form>
+            <input type="search" value="" placeholder="NA Summoner Name/>
+        </form>
+    </div>
+
     
 </html>
