Got flask app to run able to search summoner name and need to pull stats and make it look nice

--- a/static/search.css
+++ b/static/search.css
@@ -4,6 +4,7 @@
     width: 100%;
     color: rgb(0, 0, 0);
     background: rgba(0, 0, 0, 0);
+    font-family: "Courier New", Courier, monospace;
     font-size: 60px;
     font-weight: 300;
     text-align: center;
