--- a/templates/summonerRecap.html
+++ b/templates/summonerRecap.html
@@ -1,9 +1,21 @@
 <html lang="en">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
-    <link rel="stylesheet" href="{{url_for('static',filename='search.css')}}" type="text/css">
+    <link rel="stylesheet" href="{{url_for('static',filename='summonerPage.css')}}" type="text/css">
     <!-- Search form -->
-    <h1>{{name}}</h1>
-    <h1>{{level}}</h1>
-    <h1>{{rank}}</h1>
-    <h1>{{masteries}}</h1>
+    <body style="background-image: url({{bestChampImage}});">
+      <div class="row bottom10">
+        <div></div>
+      </div>
+      <div class="row align-items-center top10">
+        <div class="col"></div>
+        <div class="col blueDiv" align="center"><h1>{{name}}</h1></div>
+        <div class="col"></div>
+      </div>
+      <div class="row align-items-center top10">
+        <div class="col"></div>
+        <div class="col" align="center"><img src="{{ icon }}" alt="Icon"></div>
+        <div class="col"></div>
+      </div>
+    </body>
+
 </html>
