--- a/templates/summonerRecap.html
+++ b/templates/summonerRecap.html
@@ -8,14 +8,42 @@
       </div>
       <div class="row align-items-center top10">
         <div class="col"></div>
-        <div class="col blueDiv" align="center"><h1>{{name}}</h1></div>
+        <div class="blueDiv" align="center"><h1>{{name}}</h1></div>
         <div class="col"></div>
       </div>
       <div class="row align-items-center top10">
         <div class="col"></div>
-        <div class="col" align="center"><img src="{{ icon }}" alt="Icon"></div>
+          <div align="center"><img src="{{ icon }}" alt="Icon"></div>
         <div class="col"></div>
       </div>
+      <div class="row align-items-center top10">
+        <div class="col"></div>
+          <div class="blueDiv" align="center"><h1>{{rank}}</h1></div>
+        <div class="col"></div>
+      </div>
+      <div class="row align-items-center top10">
+        <div class="col"></div>
+          <div class="" align="center"><img src="{{ champUrls[0] }}" alt="Icon"></div>
+          <<div class="blueDiv" align="center"><h1>{{champMasteriesLevels[0]}}</h1></div>
+        <div class="col"></div>
+        <div class="col"></div>
+          <div class="" align="center"><img src="{{ champUrls[1] }}" alt="Icon"></div>
+          <div class="blueDiv" align="center"><h1>{{champMasteriesLevels[1]}}</h1></div>
+        <div class="col"></div>
+        <div class="col"></div>
+          <div class="" align="center"><img src="{{ champUrls[2] }}" alt="Icon"></div>
+          <div class="blueDiv" align="center"><h1>{{champMasteriesLevels[2]}}</h1></div>
+        <div class="col"></div>
+        <div class="col"></div>
+          <div class="" align="center"><img src="{{ champUrls[3] }}" alt="Icon"></div>
+          <div class="blueDiv" align="center"><h1>{{champMasteriesLevels[3]}}</h1></div>
+        <div class="col"></div>
+        <div class="col"></div>
+          <div class="" align="center"><img src="{{ champUrls[4]}}" alt="Icon"></div>
+          <div class="blueDiv" align="center"><h1>{{champMasteriesLevels[4]}}</h1></div>
+        <div class="col"></div>
+      </div>
+
     </body>
 
 </html>
