--- a/templates/summonerRecap.html
+++ b/templates/summonerRecap.html
@@ -1,7 +1,10 @@
 <html lang="en">
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
-    <link rel="stylesheet" href="{{url_for('static',filename='summonerPage.css')}}" type="text/css">
-    <!-- Search form -->
+    <head>
+      <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
+      <link rel="stylesheet" href="{{url_for('static',filename='summonerPage.css')}}" type="text/css">
+      <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+      <script src="{{url_for('static',filename='champion.js')}}"></script>
+    </head>
     <body style="background-image: url({{bestChampImage}});">
       <div class="row bottom10">
         <div></div>
@@ -22,26 +25,30 @@
         <div class="col"></div>
       </div>
       <div class="row align-items-center top10">
-        <div class="col"></div>
+        <div class="col-md-1">
+        </div>
+        <div class="col-md-2 championMasteryImage">
           <div class="" align="center"><img src="{{ champUrls[0] }}" alt="Icon"></div>
-          <<div class="blueDiv" align="center"><h1>{{champMasteriesLevels[0]}}</h1></div>
-        <div class="col"></div>
-        <div class="col"></div>
+          <div class="blueDiv" align="center"><h1>{{champMasteriesLevels[0]}}</h1></div>
+        </div>
+        <div class="col-md-2 championMasteryImage">
           <div class="" align="center"><img src="{{ champUrls[1] }}" alt="Icon"></div>
           <div class="blueDiv" align="center"><h1>{{champMasteriesLevels[1]}}</h1></div>
-        <div class="col"></div>
-        <div class="col"></div>
+        </div>
+        <div class="col-md-2 championMasteryImage">
           <div class="" align="center"><img src="{{ champUrls[2] }}" alt="Icon"></div>
           <div class="blueDiv" align="center"><h1>{{champMasteriesLevels[2]}}</h1></div>
-        <div class="col"></div>
-        <div class="col"></div>
+        </div>
+        <div class="col-md-2 championMasteryImage">
           <div class="" align="center"><img src="{{ champUrls[3] }}" alt="Icon"></div>
           <div class="blueDiv" align="center"><h1>{{champMasteriesLevels[3]}}</h1></div>
-        <div class="col"></div>
-        <div class="col"></div>
+        </div>
+        <div class="col-md-2 championMasteryImage">
           <div class="" align="center"><img src="{{ champUrls[4]}}" alt="Icon"></div>
           <div class="blueDiv" align="center"><h1>{{champMasteriesLevels[4]}}</h1></div>
-        <div class="col"></div>
+        </div>
+        <div class="col-md-1 championMasteryImage">
+        </div>
       </div>
 
     </body>
