Idk what I did tbh

--- a/static/summonerPage.css
+++ b/static/summonerPage.css
@@ -17,12 +17,9 @@ h1{
    background-color:#14555b;
    border-style: solid;
    border-color: #ae914b;
+   padding: 2em;
  }
 
  .cmi{
    width:100%;
- }
-
- .masteryIcon{
-   
  }
