Updated api key and CSS

--- a/templates/summonerRecap.html
+++ b/templates/summonerRecap.html
@@ -34,12 +34,17 @@
       </div>
       <div class="row align-items-center top10">
         <div class="col"></div>
-          <div align="center"><img src="{{ icon }}" alt="Icon"></div>
+          <div align="center"><img src="{{ icon }}" alt="Icon" class="profile"></div>
         <div class="col"></div>
       </div>
       <div class="row align-items-center top10">
         <div class="col"></div>
           <div class="blueDiv" align="center"><h1>{{rank}}</h1></div>
+        <div class="col"></div>
+      </div>
+      <div class="row align-items-center top10">
+        <div class="col"></div>
+          <div align="center"><img src="{{ rankUrl }}" alt="Icon" class="rank"></div>
         <div class="col"></div>
       </div>
       <div class="row align-items-center top10" style="background-color: rgba(0,0,0,0.85);">
