--- a/static/summonerPage.css
+++ b/static/summonerPage.css
@@ -17,11 +17,26 @@ h1{
    background-color:#14555b;
    border-style: solid;
    border-color: #ae914b;
+   padding: 2px 10px 2px 10px;
+   border-radius: 5px;
+   margin-bottom: 10px;
+   margin-top: 10px;
+   font-family: "Rockwell";
  }
 
  .cmi{
    width:100%;
  }
+
+ .rank{
+    width:30%;
+    margin-bottom: 1em;
+ }
+
+ .profile{
+    border: 3px solid #ae914b;
+    border-radius: 2px;
+}
 
  .masteryIcon{
    
