--- a/templates/summonerRecap.html
+++ b/templates/summonerRecap.html
@@ -23,7 +23,7 @@
     </script>
       <script src="{{url_for('static',filename='champion.js')}}"></script>
     </head>
-    <body style="background-image: url({{champFullArtUrls[0]}});">
+    <body style="background-image: url({{champFullArtUrls[0]}}); backdrop-filter: blur(7px) grayscale(1);">
       <div class="row bottom10">
         <div></div>
       </div>
