Added Champ Mastery Points

--- a/templates/summonerRecap.html
+++ b/templates/summonerRecap.html
@@ -19,7 +19,11 @@
         var ChampMas2 = '{{champMasteryImageURLS[2]}}';
         var ChampMas3 = '{{champMasteryImageURLS[3]}}';
         var ChampMas4 = '{{champMasteryImageURLS[4]}}';
-        
+        var ChampMasP0 = '{{champMasteriesPoints[0]}}';
+        var ChampMasP1 = '{{champMasteriesPoints[1]}}';
+        var ChampMasP2 = '{{champMasteriesPoints[2]}}';
+        var ChampMasP3 = '{{champMasteriesPoints[3]}}';
+        var ChampMasP4 = '{{champMasteriesPoints[4]}}';
     </script>
       <script src="{{url_for('static',filename='champion.js')}}"></script>
     </head>
