--- a/templates/summonerRecap.html
+++ b/templates/summonerRecap.html
@@ -24,12 +24,17 @@
         var ChampMasP2 = '{{champMasteriesPoints[2]}}';
         var ChampMasP3 = '{{champMasteriesPoints[3]}}';
         var ChampMasP4 = '{{champMasteriesPoints[4]}}';
+        var ChampMasName0 = '{{champMasteryNames[0]}}';
+        var ChampMasName1 = '{{champMasteryNames[1]}}';
+        var ChampMasName2 = '{{champMasteryNames[2]}}';
+        var ChampMasName3 = '{{champMasteryNames[3]}}';
+        var ChampMasName4 = '{{champMasteryNames[4]}}';
+        
     </script>
       <script src="{{url_for('static',filename='champion.js')}}"></script>
     </head>
     <body style="background-image: url({{champFullArtUrls[0]}}); backdrop-filter: blur(7px) grayscale(1);">
       <div class="row bottom10">
-        <div></div>
       </div>
       <div class="row align-items-center top10">
         <div class="col"></div>
@@ -51,27 +56,39 @@
           <div align="center"><img src="{{ rankUrl }}" alt="Icon" class="rank"></div>
         <div class="col"></div>
       </div>
-        <div class="row align-items-center top10" style="background-color: rgba(0,0,0,0.85);">
-          <div class="col-md-1">
-          </div>
-          <div class="col-md-2 championMasteryImage" id="0">
-            <div align="center"><img src="{{ champSplashUrls[0] }}" alt="Icon" class="cmi"></div>
-          </div>
-          <div class="col-md-2 championMasteryImage" id="1">
-            <div align="center"><img src="{{ champSplashUrls[1] }}" alt="Icon" class="cmi"></div>
-          </div>
-          <div class="col-md-2 championMasteryImage" id="2">
-            <div align="center"><img src="{{ champSplashUrls[2] }}" alt="Icon" class="cmi"></div>
-          </div>
-          <div class="col-md-2 championMasteryImage" id="3">
-            <div  align="center"><img src="{{ champSplashUrls[3] }}" alt="Icon" class="cmi"></div>
-          </div>
-          <div class="col-md-2 championMasteryImage" id="4">
-            <div align="center"><img src="{{ champSplashUrls[4]}}" alt="Icon" class="cmi"></div>
-          </div>
-          <div class="col-md-1">
-          </div>
+
+      <div class="row align-items-center top10">
+        <div class="col"></div>
+        <div class="blueDiv" align="center"><h1>Champion Mastery</h1></div>
+        <div class="col"></div>
+      </div>
+
+      <div class="row align-items-center top10" style="background-color: rgba(0,0,0,0.85);">
+        <div class="col-md-1">
         </div>
+        <div class="col-md-2 championMasteryImage" id="0">
+          <div class="blueDiv" align="center"><h2>{{ champMasteryNames[0]}}</h2></div>
+          <div align="center"><img src="{{ champSplashUrls[0]}}" alt="Icon" class="cmi"></div>
+        </div>
+        <div class="col-md-2 championMasteryImage" id="1">
+          <div class="blueDiv" align="center"><h2>{{ champMasteryNames[1]}}</h2></div>
+          <div align="center"><img src="{{ champSplashUrls[1] }}" alt="Icon" class="cmi"></div>
+        </div>
+        <div class="col-md-2 championMasteryImage" id="2">
+          <div class="blueDiv" align="center"><h2>{{ champMasteryNames[2]}}</h2></div>
+          <div align="center"><img src="{{ champSplashUrls[2] }}" alt="Icon" class="cmi"></div>
+        </div>
+        <div class="col-md-2 championMasteryImage" id="3">
+          <div class="blueDiv" align="center"><h2>{{ champMasteryNames[3]}}</h2></div>
+          <div  align="center"><img src="{{ champSplashUrls[3] }}" alt="Icon" class="cmi"></div>
+        </div>
+        <div class="col-md-2 championMasteryImage" id="4">
+          <div class="blueDiv" align="center"><h2>{{ champMasteryNames[4]}}</h2></div>
+          <div align="center"><img src="{{ champSplashUrls[4]}}" alt="Icon" class="cmi"></div>
+        </div>
+        <div class="col-md-1">
+        </div>
+      </div>
     </body>
 
 </html>
