internal server bugfix + both ranks

--- a/templates/summonerRecap.html
+++ b/templates/summonerRecap.html
@@ -47,14 +47,28 @@
         <div class="col"></div>
       </div>
       <div class="row align-items-center top10">
-        <div class="col"></div>
-          <div class="blueDiv" align="center"><h1>{{rank}}</h1></div>
-        <div class="col"></div>
+        <div class="col-md-4">
+        </div>
+        <div class="col-md-2">
+          <div class="blueDiv" align="center"><h1>Solo/Duo: {{soloRank}}</h1></div>
+        </div>
+        <div class="col-md-2">
+          <div class="blueDiv" align="center"><h1>Flex: {{flexRank}}</h1></div>
+        </div>
+        <div class="col-md-4">
+        </div>
       </div>
       <div class="row align-items-center top10">
-        <div class="col"></div>
-          <div align="center"><img src="{{ rankUrl }}" alt="Icon" class="rank"></div>
-        <div class="col"></div>
+        <div class="col-md-4">
+        </div>
+        <div class="col-md-2">
+          <div align="center"><img src="{{ soloRankUrl }}" alt="Icon" class="rank"></div>
+        </div>
+        <div class="col-md-2">
+          <div align="center"><img src="{{ flexRankUrl }}" alt="Icon" class="rank"></div>
+        </div>
+        <div class="col-md-4">
+        </div>
       </div>
 
       <div class="row align-items-center top10">
