--- a/templates/summonerRecap.html
+++ b/templates/summonerRecap.html
@@ -47,57 +47,61 @@
         <div class="col"></div>
       </div>
       <div class="row align-items-center top10">
-        <div class="col-md-4">
+        <div class="col-md-1">
         </div>
-        <div class="col-md-2">
+        <div class="col-md-5">
           <div class="blueDiv" align="center"><h1>Solo/Duo: {{soloRank}}</h1></div>
         </div>
-        <div class="col-md-2">
+        <div class="col-md-5">
           <div class="blueDiv" align="center"><h1>Flex: {{flexRank}}</h1></div>
         </div>
-        <div class="col-md-4">
+        <div class="col-md-1">
         </div>
       </div>
       <div class="row align-items-center top10">
-        <div class="col-md-4">
+        <div class="col-md-1">
         </div>
-        <div class="col-md-2">
+        <div class="col-md-5">
           <div align="center"><img src="{{ soloRankUrl }}" alt="Icon" class="rank"></div>
         </div>
-        <div class="col-md-2">
+        <div class="col-md-5">
           <div align="center"><img src="{{ flexRankUrl }}" alt="Icon" class="rank"></div>
         </div>
-        <div class="col-md-4">
+        <div class="col-md-1">
         </div>
       </div>
 
-      <div class="row align-items-center top10">
-        <div class="col"></div>
-        <div class="blueDiv" align="center"><h1>Champion Mastery</h1></div>
-        <div class="col"></div>
+      <div class="row align-items-center top10" style="background-color: rgba(0,0,0,0.85);">
+        <div class="col-md-1">
+        </div>
+        <div class="col-md-10">
+          <div class="blueDiv" align="center"><h1>Champion Mastery</h1></div>
+        </div>
+        <div class="col-md-1">
+        </div>
       </div>
 
       <div class="row align-items-center top10" style="background-color: rgba(0,0,0,0.85);">
         <div class="col-md-1">
         </div>
         <div class="col-md-2 championMasteryImage" id="0">
-          <div class="blueDiv" align="center"><h2>{{ champMasteryNames[0]}}</h2></div>
+          <div class="blueDiv name" align="center"><h2>{{ champMasteryNames[0]}}</h2></div>
           <div align="center"><img src="{{ champSplashUrls[0]}}" alt="Icon" class="cmi"></div>
         </div>
         <div class="col-md-2 championMasteryImage" id="1">
-          <div class="blueDiv" align="center"><h2>{{ champMasteryNames[1]}}</h2></div>
+          <div class="blueDiv name" align="center"><h2>{{ champMasteryNames[1]}}</h2></div>
           <div align="center"><img src="{{ champSplashUrls[1] }}" alt="Icon" class="cmi"></div>
         </div>
         <div class="col-md-2 championMasteryImage" id="2">
-          <div class="blueDiv" align="center"><h2>{{ champMasteryNames[2]}}</h2></div>
+          <div class="blueDiv name" align="center"><h2>{{ champMasteryNames[2]}}</h2></div>
           <div align="center"><img src="{{ champSplashUrls[2] }}" alt="Icon" class="cmi"></div>
         </div>
         <div class="col-md-2 championMasteryImage" id="3">
-          <div class="blueDiv" align="center"><h2>{{ champMasteryNames[3]}}</h2></div>
+          <div class="blueDiv name" align="center"><h2>{{ champMasteryNames[3]}}</h2></div>
           <div  align="center"><img src="{{ champSplashUrls[3] }}" alt="Icon" class="cmi"></div>
         </div>
         <div class="col-md-2 championMasteryImage" id="4">
-          <div class="blueDiv" align="center"><h2>{{ champMasteryNames[4]}}</h2></div>
+          <div class="blueDiv name" align="center"><h2>{{ champMasteryNames[4]}}</h2></div>
           <div align="center"><img src="{{ champSplashUrls[4]}}" alt="Icon" class="cmi"></div>
         </div>
         <div class="col-md-1">
