--- a/templates/summonerRecap.html
+++ b/templates/summonerRecap.html
@@ -2,6 +2,7 @@
     <head>
       <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
       <link rel="stylesheet" href="{{url_for('static',filename='summonerPage.css')}}" type="text/css">
+      <link rel="shortcut icon" href="{{ url_for('static', filename='favicon.ico') }}">
       <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
       <script type="text/javascript">
         var ChampArt0 = '{{champFullArtUrls[0]}}';
