--- a/templates/summonerRecap.html
+++ b/templates/summonerRecap.html
@@ -35,19 +35,19 @@
       <script src="{{url_for('static',filename='champion.js')}}"></script>
     </head>
     <body style="background-image: url({{champFullArtUrls[0]}}); backdrop-filter: blur(7px) grayscale(1);">
-      <div class="row bottom10">
+      <div class="row bottom15">
       </div>
-      <div class="row align-items-center top10">
+      <div class="row align-items-center">
         <div class="col"></div>
         <div class="blueDiv" align="center"><h1>{{name}}</h1></div>
         <div class="col"></div>
       </div>
-      <div class="row align-items-center top10">
+      <div class="row align-items-center bottom20 fade">
         <div class="col"></div>
           <div align="center"><img src="{{ icon }}" alt="Icon" class="profile"></div>
         <div class="col"></div>
       </div>
-      <div class="row align-items-center top10">
+      <div class="row align-items-center fade">
         <div class="col-md-1">
         </div>
         <div class="col-md-5">
@@ -59,7 +59,7 @@
         <div class="col-md-1">
         </div>
       </div>
-      <div class="row align-items-center top10">
+      <div class="row align-items-center bottom20 fade">
         <div class="col-md-1">
         </div>
         <div class="col-md-5">
@@ -72,7 +72,7 @@
         </div>
       </div>
 
-      <div class="row align-items-center top10" style="background-color: rgba(0,0,0,0.85);">
+      <div class="row align-items-center  fade" style="background-color: rgba(0,0,0,0.75);">
         <div class="col-md-1">
         </div>
         <div class="col-md-10">
@@ -82,7 +82,7 @@
         </div>
       </div>
 
-      <div class="row align-items-center top10" style="background-color: rgba(0,0,0,0.85);">
+      <div class="row align-items-center fade" style="background-color: rgba(0,0,0,0.75);">
         <div class="col-md-1">
         </div>
         <div class="col-md-2 championMasteryImage" id="0">
