--- a/static/summonerPage.css
+++ b/static/summonerPage.css
@@ -21,6 +21,14 @@ h1, h2{
    margin-bottom: 10em;
  }
 
+ .bottom15{
+  margin-bottom: 15em;
+ }
+
+ .bottom20{
+  margin-bottom: 20em;
+ }
+
  .blueDiv{
    background-color:#14555b;
    border-style: solid;
@@ -49,6 +57,10 @@ h1, h2{
  .profile{
     border: 3px solid #ae914b;
     border-radius: 2px;
+    height: 250px;
 }
 
+.fade {
+  opacity: 0;
+}
 
