--- a/templates/summonerRecap.html
+++ b/templates/summonerRecap.html
@@ -39,7 +39,7 @@
       </div>
       <div class="row align-items-center">
         <div class="col"></div>
-        <div class="blueDiv" align="center"><h1>{{name}}</h1></div>
+        <div><h1 class="title">{{name}}</h1></div>
         <div class="col"></div>
       </div>
       <div class="row align-items-center bottom20 fade">
@@ -51,10 +51,10 @@
         <div class="col-md-1">
         </div>
         <div class="col-md-5">
-          <div class="blueDiv" align="center"><h1>Solo/Duo: {{soloRank}}</h1></div>
+          <div class="blueDiv rankBox" align="center"><h1 class="antiBootstrap">Solo: {{soloRank}}</h1></div>
         </div>
         <div class="col-md-5">
-          <div class="blueDiv" align="center"><h1>Flex: {{flexRank}}</h1></div>
+          <div class="blueDiv rankBox" align="center"><h1 class="antiBootstrap">Flex: {{flexRank}}</h1></div>
         </div>
         <div class="col-md-1">
         </div>
@@ -76,7 +76,7 @@
         <div class="col-md-1">
         </div>
         <div class="col-md-10">
-          <div class="blueDiv" align="center"><h1>Champion Mastery</h1></div>
+          <div class="blueDiv" align="center"><h1 class="antiBootstrap">Champion Mastery</h1></div>
         </div>
         <div class="col-md-1">
         </div>
@@ -86,23 +86,23 @@
         <div class="col-md-1">
         </div>
         <div class="col-md-2 championMasteryImage" id="0">
-          <div class="blueDiv name" align="center"><h2>{{ champMasteryNames[0]}}</h2></div>
+          <div class="blueDiv name" align="center"><h2 class="antiBootstrap">{{ champMasteryNames[0]}}</h2></div>
           <div align="center"><img src="{{ champSplashUrls[0]}}" alt="Icon" class="cmi"></div>
         </div>
         <div class="col-md-2 championMasteryImage" id="1">
-          <div class="blueDiv name" align="center"><h2>{{ champMasteryNames[1]}}</h2></div>
+          <div class="blueDiv name" align="center"><h2 class="antiBootstrap">{{ champMasteryNames[1]}}</h2></div>
           <div align="center"><img src="{{ champSplashUrls[1] }}" alt="Icon" class="cmi"></div>
         </div>
         <div class="col-md-2 championMasteryImage" id="2">
-          <div class="blueDiv name" align="center"><h2>{{ champMasteryNames[2]}}</h2></div>
+          <div class="blueDiv name" align="center"><h2 class="antiBootstrap">{{ champMasteryNames[2]}}</h2></div>
           <div align="center"><img src="{{ champSplashUrls[2] }}" alt="Icon" class="cmi"></div>
         </div>
         <div class="col-md-2 championMasteryImage" id="3">
-          <div class="blueDiv name" align="center"><h2>{{ champMasteryNames[3]}}</h2></div>
+          <div class="blueDiv name" align="center"><h2 class="antiBootstrap">{{ champMasteryNames[3]}}</h2></div>
           <div  align="center"><img src="{{ champSplashUrls[3] }}" alt="Icon" class="cmi"></div>
         </div>
         <div class="col-md-2 championMasteryImage" id="4">
-          <div class="blueDiv name" align="center"><h2>{{ champMasteryNames[4]}}</h2></div>
+          <div class="blueDiv name" align="center"><h2 class="antiBootstrap">{{ champMasteryNames[4]}}</h2></div>
           <div align="center"><img src="{{ champSplashUrls[4]}}" alt="Icon" class="cmi"></div>
         </div>
         <div class="col-md-1">
