--- a/static/summonerPage.css
+++ b/static/summonerPage.css
@@ -38,6 +38,23 @@ h1, h2{
    margin-bottom: 10px;
    margin-top: 10px;
    font-family: "Friz Quadrata Std Medium";
+   text-shadow: 1px 1px 1px #000000;
+ }
+
+ .title{
+  font-family: "Friz Quadrata Std Medium";
+  font-size: 700%;
+  text-shadow: 4px 4px 4px #14555b;
+ }
+
+ .rankBox {
+   width: 60%;
+   margin-left: auto;
+   margin-right: auto;
+ }
+
+ .antiBootstrap {
+   margin-bottom: 0px;
  }
 
  .cmi{
