--- a/templates/summonerRecap.html
+++ b/templates/summonerRecap.html
@@ -72,7 +72,7 @@
         </div>
       </div>
 
-      <div class="row align-items-center  fade" style="background-color: rgba(0,0,0,0.75);">
+      <div class="row align-items-center  fade">
         <div class="col-md-1">
         </div>
         <div class="col-md-10">
@@ -82,7 +82,7 @@
         </div>
       </div>
 
-      <div class="row align-items-center fade" style="background-color: rgba(0,0,0,0.75);">
+      <div class="row align-items-center fade">
         <div class="col-md-1">
         </div>
         <div class="col-md-2 championMasteryImage" id="0">
