--- a/templates/summonerSearchPage.html
+++ b/templates/summonerSearchPage.html
@@ -2,10 +2,13 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
     <link rel="stylesheet" href="{{url_for('static',filename='search.css')}}" type="text/css">
     <link rel="shortcut icon" href="{{ url_for('static', filename='favicon.ico') }}">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+    <script src="{{url_for('static',filename='search.js')}}"></script>
     <!-- Search form -->
-    <div id="search">
+    <p class ="title">Welcome to the League of Stats<p>
+    <div  id="search">
         <form action="#" method="POST">
-            <input type="search" value="" placeholder="Summoner Name" name=SummonerName />
+            <input class="search" type="search" value="" placeholder="Summoner Name" name=SummonerName />
         </form>
     </div>
 
