--- a/templates/summonerRecap.html
+++ b/templates/summonerRecap.html
@@ -35,6 +35,7 @@
       <script src="{{url_for('static',filename='champion.js')}}"></script>
     </head>
     <body style="background-image: url({{champFullArtUrls[0]}}); backdrop-filter: blur(7px) grayscale(1);">
+      <div><a href="/"><img src="../static/ranked-emblems/logo.png" class="homeLogo" alt="Icon"></a></div>
       <div class="row bottom15">
       </div>
       <div class="row align-items-center">
@@ -108,6 +109,14 @@
         <div class="col-md-1">
         </div>
       </div>
+      <div class="row align-items-center invis fade">
+      <div class="col-md-3">
+        <div class="blueDiv">&copy; WerthermanBoss and BionicRayquaza 2020</div>
+      </div>
+      <div class="col-md-9">
+      </div>
+      </div>
+      
     </body>
 
 </html>
